Unable to get location through the proxy
I have tried this with version 1.24.8, 1.24.12, and commit 10eb0a83 (current head on the master branch). I am using a Telit LE910C1-NF on a Raspberry Pi 3 Model B+
When not using the proxy I am able to get location information using qmicli. When using the proxy, the proxy will get the location information, but not pass it to qmicli. The following logs (with position redacted) show the problem. They were captured using commit 10eb0a83 on a recently power cycled device. I truncated the qmi-proxy log at the first location report and redacted the location, but it was actually run for many reports. qmicli.log qmi-proxy.log
I have done a little debugging and found that process_message() gets NULL for the client at line 2634 of qmi-device.c:
client = g_hash_table_lookup (self->priv->registered_clients,
build_registered_client_key (qmi_message_get_client_id (message),
qmi_message_get_service (message)));
The proxy was run as:
sudo /usr/libexec/qmi-proxy --no-exit -v
qmi-cli was run with the following:
sudo qmicli -d /dev/cdc-wdm0 -p --loc-start --client-no-release-cid -v
sudo qmicli -d /dev/cdc-wdm0 -p --loc-follow-position-report --client-cid=2 --client-no-release-cid -v
sudo qmicli -d /dev/cdc-wdm0 -p --loc-stop --client-cid=2 -v